http --> https for all links

--- a/_posts/2015-04-22-new-site.md
+++ b/_posts/2015-04-22-new-site.md
@@ -6,6 +6,6 @@ author: Eliot McIntire and Alex Chubaty
 tags: [website]
 ---
 
-Welcome! We are starting a new blog about predicting in ecology. There are many topics to cover as we are working through many of them currently. One of the key tools we use is simulation modeling. Please see our R package, [SpaDES](http://SpaDES.PredictiveEcology.org), for more about that.
+Welcome! We are starting a new blog about predicting in ecology. There are many topics to cover as we are working through many of them currently. One of the key tools we use is simulation modeling. Please see our R package, [SpaDES](https://SpaDES.PredictiveEcology.org), for more about that.
 
 See you soon!
