--- a/_posts/2016-01-26-SpaDES-v1.1.0-now-on-CRAN.md
+++ b/_posts/2016-01-26-SpaDES-v1.1.0-now-on-CRAN.md
@@ -37,7 +37,7 @@ install.packages("SpaDES")
 
 # install suggested package `fastshp`
 #  (requires development tools, e.g., Rtools)
-install.packages("fastshp", repos = "http://rforge.net", type = "source")
+install.packages("fastshp", repos = "https://rforge.net", type = "source")
 ```
 
 ### Documentation
@@ -52,7 +52,7 @@ browseVignettes(package="SpaDES")
 
 **Website:**
 
-[http://SpaDES.PredictiveEcology.org](http://SpaDES.PredictiveEcology.org)
+[https://SpaDES.PredictiveEcology.org](https://SpaDES.PredictiveEcology.org)
 
 **Wiki:**
 
