--- a/_posts/2016-10-15-SpaDES-workshop.Rmd
+++ b/_posts/2016-10-15-SpaDES-workshop.Rmd
@@ -13,8 +13,8 @@ comments: true
 tags: [SpaDES, workshop, raster]
 ---
 
-Alex Chubaty and I will be leading a 2nd [introductory SpaDES workshop](http://rpubs.com/PredictiveEcology/SpaDES-Intro-Course-Outline) this fall.
-This will essentially be the same course as the one offered in [September, 2016](http://rpubs.com/PredictiveEcology/Archives-Sept16-Outline). 
+Alex Chubaty and I will be leading a 2nd [introductory SpaDES workshop](https://rpubs.com/PredictiveEcology/SpaDES-Intro-Course-Outline) this fall.
+This will essentially be the same course as the one offered in [September, 2016](https://rpubs.com/PredictiveEcology/Archives-Sept16-Outline). 
 
 
 ### Dates: 
@@ -27,5 +27,5 @@ This will essentially be the same course as the one offered in [September, 2016]
 
 **Where: Pacific Forestry Centre, Victoria, BC**
 
-[Current workshop outline](http://rpubs.com/PredictiveEcology/SpaDES-Intro-Course-Outline)
+[Current workshop outline](https://rpubs.com/PredictiveEcology/SpaDES-Intro-Course-Outline)
 
