--- a/_posts/2018-01-31-SpaDES-v2.0.1-now-on-CRAN.md
+++ b/_posts/2018-01-31-SpaDES-v2.0.1-now-on-CRAN.md
@@ -10,9 +10,9 @@ tags: [R, SpaDES]
 
 This is a minor update that fixes backward compatibility with R version 3.3.0.
 
-The core simulation components are provided by [`SpaDES.core`](http://spades-core.predictiveecology.org/)), with additonal modelling tools provided by [`SpaDES.tools`](http://spades-tools.predictiveecology.org/)).
-Plotting is provided via [`quickPlot`](http://quickplot.predictiveecology.org/), and simulation caching methods via [`reproducible`](http://reproducible.predictiveecology.org/).
-Additional functionality is provided by the [`SpaDES.addins`](http://spades-addins.predictiveecology.org/) and [`SpaDES.shiny`](http://spades-shiny.predictiveecology.org/) packages.
+The core simulation components are provided by [`SpaDES.core`](https://spades-core.predictiveecology.org/)), with additonal modelling tools provided by [`SpaDES.tools`](https://spades-tools.predictiveecology.org/)).
+Plotting is provided via [`quickPlot`](https://quickplot.predictiveecology.org/), and simulation caching methods via [`reproducible`](https://reproducible.predictiveecology.org/).
+Additional functionality is provided by the [`SpaDES.addins`](https://spades-addins.predictiveecology.org/) and [`SpaDES.shiny`](https://spades-shiny.predictiveecology.org/) packages.
 
 This release also includes several important bug fixes and and performance improvements to many of these spinoff packages.
 
@@ -20,22 +20,22 @@ For a complete list of changes, see [the package's NEWS file](https://raw.github
 
 ### Websites
 
-**`SpaDES` metapackage:** [http://SpaDES.PredictiveEcology.org](http://SpaDES.PredictiveEcology.org)
+**`SpaDES` metapackage:** [https://SpaDES.PredictiveEcology.org](https://SpaDES.PredictiveEcology.org)
 
 **Other `SpaDES` ecosystem packages:**
 
-- `quickPlot`: [http://quickplot.predictiveecology.org/](http://quickplot.predictiveecology.org/)
-- `reproducible`: [http://reproducible.predictiveecology.org/](http://reproducible.predictiveecology.org/)
-- `SpaDES.addins`: [http://spades-addins.predictiveecology.org](http://spades-addins.predictiveecology.org)
-- `SpaDES.core`: [http://spades-core.predictiveecology.org/](http://spades-core.predictiveecology.org/)
-- `SpaDES.shiny`: [http://spades-shiny.predictiveecology.org/](http://spades-shiny.predictiveecology.org/)
-- `SpaDES.tools`: [http://spades-tools.predictiveecology.org/](http://spades-tools.predictiveecology.org/)
+- `quickPlot`: [https://quickplot.predictiveecology.org/](https://quickplot.predictiveecology.org/)
+- `reproducible`: [https://reproducible.predictiveecology.org/](https://reproducible.predictiveecology.org/)
+- `SpaDES.addins`: [https://spades-addins.predictiveecology.org](https://spades-addins.predictiveecology.org)
+- `SpaDES.core`: [https://spades-core.predictiveecology.org/](https://spades-core.predictiveecology.org/)
+- `SpaDES.shiny`: [https://spades-shiny.predictiveecology.org/](https://spades-shiny.predictiveecology.org/)
+- `SpaDES.tools`: [https://spades-tools.predictiveecology.org/](https://spades-tools.predictiveecology.org/)
 
-**Predictive Ecology Blog:** [http://predictiveecology.org/](http://predictiveecology.org/)
+**Predictive Ecology Blog:** [https://predictiveecology.org/](https://predictiveecology.org/)
 
-**Canadian Forest Service Adaptation Toolkit:** [http://www.nrcan.gc.ca/forests/climate-change/tools-resources/17770](http://www.nrcan.gc.ca/forests/climate-change/tools-resources/17770)
+**Canadian Forest Service Adaptation Toolkit:** [https://www.nrcan.gc.ca/forests/climate-change/tools-resources/17770](https://www.nrcan.gc.ca/forests/climate-change/tools-resources/17770)
 
-**LandWeb Demonstration App:** [http://landweb.predictiveecology.org/Demo/](http://landweb.predictiveecology.org/Demo/)
+**LandWeb Demonstration App:** [https://landweb.predictiveecology.org/Demo/](https://landweb.predictiveecology.org/Demo/)
 
 **Examples for R-savvy users:**
 
@@ -92,7 +92,7 @@ install_github("PredictiveEcology/SpaDES", ref = "development", dependencies = T
 - [Getting started guide](https://github.com/PredictiveEcology/SpaDES/wiki/Getting-Started-Guide)
 - [Vignettes](https://github.com/PredictiveEcology/SpaDES/wiki/Help-Vignettes)
 - [Wiki](https://github.com/PredictiveEcology/SpaDES/wiki)
-- [Workshops](http://predictiveecology.org/2016/08/09/SpaDES-workshops.html)
+- [Workshops](https://predictiveecology.org/2016/08/09/SpaDES-workshops.html)
 
 ## Getting help
 
