--- a/about.qmd
+++ b/about.qmd
@@ -4,7 +4,7 @@ permalink: /about/
 comments: false
 ---
 
-### Predictive Ecology Lab Group
+### Predictive Ecology Community
 
 We are located in Victoria, British Columbia, Canada, at the Pacific Forestry Centre.
 Several lab members are students through Université Laval and are based out of Québec City.
@@ -66,7 +66,7 @@ Through each of the systems I study, I strive to understand the ecological proce
 |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |                                                                                                                                                                                                                                                                                                          |
 | [Sebastien Renard](https://www.researchgate.net/profile/Sebastien_Renard2) (PhD Student)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   | [Dr. Yong Luo](https://sites.google.com/a/lakeheadu.ca/yong-luo/home) (Postdoctoral Fellow 2017)                                                                                                                                                                                                         |
 +----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| ![Josh Nowak](https://www.cfc.umt.edu/research/lukacslab/imx/Josh%20Nowak_2018.jpg){alt="Josh Nowak"} [Dr. Josh Nowak](https://www.speedgoat.io/story/) (PhD 2015)                                                                                                                                                                                                                                                                                                                                                                                                                                                         | ![Mario van Telgen](https://i1.rgstatic.net/ii/profile.image/426959055396868-1478806379526_Q512/Mario_Van_Telgen.jpg){width="226"}                                                                                                                                                                       |
+| ![Josh Nowak](https://pbs.twimg.com/profile_images/1030880418554245120/PTIxTrMS_400x400.jpg){alt="Josh Nowak"} [Dr. Josh Nowak](https://www.speedgoat.io/story/) (PhD 2015)                                                                                                                                                                                                                                                                                                                                                                                                                                                         | ![Mario van Telgen](https://i1.rgstatic.net/ii/profile.image/426959055396868-1478806379526_Q512/Mario_Van_Telgen.jpg){width="226"}                                                                                                                                                                       |
 |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |                                                                                                                                                                                                                                                                                                          |
 |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            | [Mario van Telgen](https://www.researchgate.net/profile/Mario_Van_Telgen) (PhD)                                                                                                                                                                                                                          |
 +----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
