--- a/about.qmd
+++ b/about.qmd
@@ -32,7 +32,7 @@ Through each of the systems I study, I strive to understand the ecological proce
 ### Current Personel
 
 +-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| ![Tati Micheletti](https://borealbirds.ualberta.ca/wp-content/uploads/sites/85/2019/07/TatiMichelleti.jpg){alt="Tati Micheletti"}[Dr. Tatiane Micheletti](https://github.com/tati-micheletti/) (Postdoctoral Fellow 2018-) Tati is our "integrator", asking questions about managing land in Canada when there are multiple, conflicting management pressures. She has been specializing in SpaDES model development, bird and caribou forecasting, protected areas optimization, and tradeoffs/synergies across disciplines. | ![Ana Raymundo](https://borealbirds.ualberta.ca/wp-content/uploads/sites/85/2019/07/AnaRaymundo.jpg){alt="Ana Raymundo"} [Ana Raymundo](https://borealbirds.ualberta.ca/2019/07/11/ana-raymundo/) (PhD Student 2018-) Ana is working on questions related to forestry and birds across Canada. A student at Laval University, she is currently in Victoria learning the SpaDES ecosystem. |
+| ![Tati Micheletti](https://avatars.githubusercontent.com/u/33500569?v=4){alt="Tati Micheletti"}[Dr. Tatiane Micheletti](https://github.com/tati-micheletti/) (Postdoctoral Fellow 2018-) Tati is our "integrator", asking questions about managing land in Canada when there are multiple, conflicting management pressures. She has been specializing in SpaDES model development, bird and caribou forecasting, protected areas optimization, and tradeoffs/synergies across disciplines. | ![Ana Raymundo](https://borealbirds.ualberta.ca/wp-content/uploads/sites/85/2019/07/AnaRaymundo.jpg){alt="Ana Raymundo"} [Ana Raymundo](https://borealbirds.ualberta.ca/2019/07/11/ana-raymundo/) (PhD Student 2018-) Ana is working on questions related to forestry and birds across Canada. A student at Laval University, she is currently in Victoria learning the SpaDES ecosystem. |
 +-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
 | ![Isolde Lane Shaw](https://borealbirds.ualberta.ca/wp-content/uploads/sites/85/2019/07/IsoldeLaneShaw.jpg){alt="Isolde Lane Shaw"} [Isolde Lane Shaw](https://borealbirds.ualberta.ca/2019/07/11/isolde-lane-shaw/) (PhD Student 2018-)                                                                                                                                                                                                                                                                                      | ![Geneviève Degré-Timmons](https://www.wlu.ca/academics/research/reports/gnwt-report/assets/images/profiles/genevieve-degre-timmons.jpg){width="230"}                                                                                                                                                                                                                                     |
 |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |                                                                                                                                                                                                                                                                                                                                                                                           |
