--- a/publications.qmd
+++ b/publications.qmd
@@ -4,4 +4,6 @@ permalink: /publications/
 comments: false
 ---
 This list is currently only for Eliot McIntire. To see other members currently in the lab, see [Alex Chubaty](https://www.alexchubaty.com/publications.html), [Yong Luo](https://sites.google.com/a/lakeheadu.ca/yong-luo/publications), [Alana Clason](https://bvcentre.ca/people/bio/alana_clason/), [Sarah Bauduin](https://www.researchgate.net/profile/Sarah_Bauduin/publications), [Jean Marchal](https://www.researchgate.net/profile/Jean_Marchal/publications), [Sébastien Renard](https://www.cef-cfr.ca/index.php?n=Membres.SebastienRenard)
+This list is currently only for Eliot McIntire.
+To see other members currently in the lab, see [Alex Chubaty](https://www.alexchubaty.com/publications.html), [Yong Luo](https://sites.google.com/a/lakeheadu.ca/yong-luo/publications), [Alana Clason](https://bvcentre.ca/people/bio/alana_clason/), [Sarah Bauduin](https://www.researchgate.net/profile/Sarah_Bauduin/publications), [Jean Marchal](https://www.researchgate.net/profile/Jean_Marchal/publications), [Sébastien Renard](https://www.cef-cfr.ca/index.php?n=Membres.SebastienRenard), [Ceres Barros](https://ceresbarros.wordpress.com/publications/)
 <script src="https://bibbase.org/show?bib=https%3A%2F%2Fapi.zotero.org%2Fusers%2F1482%2Fcollections%2FHKWRC5VM%2Fitems%3Fkey%3DL01f7EYtoVM7a0BZeSBan70l%26format%3Dbibtex%26limit%3D100&jsonp=1&theme=side&authorFirst=1"></script> 
