--- a/about.qmd
+++ b/about.qmd
@@ -29,7 +29,7 @@ Through each of the systems I study, I strive to understand the ecological proce
 
 [Predictive Ecology Blog](https://predictiveecology.org/) [Predictive Ecology on GitHub](https://github.com/PredictiveEcology) [SpaDES](https://spades.predictiveecology.org)
 
-### Current Personel
+### Current Personnel
 
 +----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
 | ![Tati Micheletti](https://avatars.githubusercontent.com/u/33500569?v=4){alt="Tati Micheletti" width="232"}                                                                                                                                                                                                                                                                                  | ![Ana Raymundo](https://borealbirds.ualberta.ca/wp-content/uploads/sites/85/2019/07/AnaRaymundo.jpg){alt="Ana Raymundo"} [Ana Raymundo](https://borealbirds.ualberta.ca/2019/07/11/ana-raymundo/) (PhD Student 2018-) Ana is working on questions related to forestry and birds across Canada. A student at Laval University, she is currently in Victoria learning the SpaDES ecosystem.   |
